pom.xml 수정 .gitignore 추가

--- a/bangbang/pom.xml
+++ b/bangbang/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>bangbang</artifactId>
 	<name>bangbang</name>
 	<packaging>war</packaging>
-	<version>1.0.0-BUILD-SNAPSHOT</version>
+	
 	<properties>
 		<java-version>1.8</java-version>
 		<org.springframework-version>5.0.4.RELEASE</org.springframework-version>
@@ -240,7 +240,14 @@
 			<artifactId>maven-compiler-plugin</artifactId>
 			<version>3.7.0</version>
 		</dependency>
-
+		
+		<!-- https://mvnrepository.com/artifact/org.webjars.bower/jquery -->
+		<dependency>
+		    <groupId>org.webjars.bower</groupId>
+		    <artifactId>jquery</artifactId>
+		    <version>3.3.1</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<plugins>
@@ -278,6 +285,23 @@
 					<mainClass>org.test.int1.Main</mainClass>
 				</configuration>
 			</plugin>
+			
+	      <plugin>
+	        <artifactId>maven-compiler-plugin</artifactId>
+	        <version>3.8.0</version>
+	        <configuration>
+	          <source>1.8</source>
+	          <target>1.8</target>
+	        </configuration>
+	      </plugin>
+	      <plugin>
+	        <artifactId>maven-war-plugin</artifactId>
+	        <version>3.2.1</version>
+	        <configuration>
+	          <warSourceDirectory>WebContent</warSourceDirectory>
+	        </configuration>
+	      </plugin>
+	      
 		</plugins>
 	</build>
 </project>
