--- a/bangbang/pom.xml
+++ b/bangbang/pom.xml
@@ -146,10 +146,19 @@
       </dependency>
 
       <!-- https://mvnrepository.com/artifact/com.oracle/ojdbc6 -->
-      <dependency>
+      <!-- <dependency>
          <groupId>com.oracle</groupId>
          <artifactId>ojdbc6</artifactId>
          <version>11.2.0.4.0-atlassian-hosted</version>
+      </dependency> -->
+      
+      <!--  ojdbc 7 테스트 -->
+       <dependency>
+         <groupId>com.oracle</groupId>
+          <artifactId>ojdbc7</artifactId>
+          <version>12.1.0.2</version>
+          <scope>system</scope>
+          <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/ojdbc7-12.1.0.2.jar</systemPath>
       </dependency>
 
       <dependency>
